--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -112,20 +112,24 @@ model = "eleven_monolingual_v1"    # Model: "eleven_monolingual_v1", "eleven_mul
 stability = 0.5                    # Voice stability (0.0-1.0)
 similarity_boost = 0.5             # Voice similarity boost (0.0-1.0)
 
-# Silero TTS Provider (neural TTS, local models)
+# Silero v4 TTS Provider (neural TTS, latest version)
 [tts.providers.silero_v4]
 enabled = false                     # Enable Silero v4 provider
-model_path = ""                    # Model path (empty = use IRENE_ASSETS_ROOT/models)
-speaker = "aidar"                  # Speaker voice: "aidar", "baya", "kseniya", "xenia", "eugene"
+default_speaker = "xenia"          # Speaker voice: "xenia", "aidar", "baya", "kseniya", "eugene", "random"
 sample_rate = 48000                # Audio sample rate: 24000, 48000, 96000
 torch_device = "cpu"               # PyTorch device: "cpu", "cuda"
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # Silero v3 TTS Provider (legacy support)
 [tts.providers.silero_v3]
 enabled = false                     # Enable Silero v3 provider
-model_path = ""                    # Model path (empty = use IRENE_ASSETS_ROOT/models)
-speaker = "aidar"                  # Speaker voice
-sample_rate = 48000                # Audio sample rate
+default_speaker = "xenia"          # Default speaker voice
+sample_rate = 24000                # Audio sample rate
+torch_device = "cpu"               # PyTorch device: "cpu", "cuda"
+put_accent = true                  # Enable accent marks in speech
+put_yo = true                      # Use ё character in speech
+threads = 4                        # Number of processing threads
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # Pyttsx TTS Provider (cross-platform system TTS)
 [tts.providers.pyttsx]
@@ -137,7 +141,10 @@ voice_volume = 1.0                 # Volume level (0.0-1.0)
 # Vosk TTS Provider (experimental)
 [tts.providers.vosk]
 enabled = false                     # Enable Vosk TTS provider
-model_path = ""                    # Model path for Vosk TTS
+default_language = "ru"            # Default language: "ru", "en", "de", "fr"
+sample_rate = 22050                # Audio sample rate
+voice_speed = 1.0                  # Voice speed multiplier (0.1-3.0)
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # ============================================================
 # AUDIO (PLAYBACK) COMPONENT CONFIGURATION
@@ -189,13 +196,15 @@ device = "cpu"                     # Device: "cpu", "cuda"
 default_language = "ru"            # Language (null = auto-detect, "en", "ru", etc.)
 temperature = 0.0                  # Temperature for decoding (0.0-1.0)
 no_speech_threshold = 0.6          # No speech detection threshold
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # Vosk ASR Provider (offline, lighter models)
 [asr.providers.vosk]
 enabled = false                     # Enable Vosk provider
-model_paths = {}                   # Custom model paths (empty = use IRENE_ASSETS_ROOT/models)
+default_language = "ru"            # Default language: "ru", "en"
 sample_rate = 16000                # Audio sample rate
 confidence_threshold = 0.7         # Minimum confidence for recognition
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # Google Cloud Speech ASR Provider (cloud-based, high accuracy)
 [asr.providers.google_cloud]
@@ -263,27 +272,26 @@ timeout_seconds = 5.0              # Detection timeout in seconds
 # OpenWakeWord Provider (recommended, open source)
 [voice_trigger.providers.openwakeword]
 enabled = true                      # Enable OpenWakeWord provider
-model_paths = {}                   # Custom model paths (empty = use IRENE_ASSETS_ROOT/models)
 inference_framework = "onnx"       # Framework: "onnx", "tflite"
 vad_threshold = 0.5                # Voice activity detection threshold
 chunk_size = 1280                  # Audio chunk size (80ms at 16kHz)
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # Porcupine Provider (Picovoice, commercial)
 [voice_trigger.providers.porcupine]
 enabled = false                     # Enable Porcupine provider
 access_key = "${PICOVOICE_ACCESS_KEY}"  # Picovoice access key
 keywords = ["jarvis"]              # Built-in keywords to use
-model_path = ""                    # Custom model path (optional)
 
 # MicroWakeWord Provider (ESP32/embedded)
 [voice_trigger.providers.microwakeword]
 enabled = false                     # Enable MicroWakeWord provider
-model_paths = {}                   # Custom model paths (empty = use IRENE_ASSETS_ROOT/models)
 feature_buffer_size = 49           # Feature buffer size (49 * 10ms = 490ms)
 detection_window_size = 3          # Detection window size (consecutive detections needed)
 stride_duration_ms = 10            # Audio processing stride in milliseconds  
 window_duration_ms = 30            # Audio analysis window duration
 num_mfcc_features = 40             # Number of MFCC features for analysis
+preload_models = false             # Preload AI models during provider initialization for faster startup
 
 # ============================================================
 # NLU (NATURAL LANGUAGE UNDERSTANDING) COMPONENT CONFIGURATION
@@ -316,6 +324,7 @@ fallback_model = "en_core_web_sm"  # Fallback model if primary fails
 confidence_threshold = 0.6         # Provider-specific confidence threshold
 enable_ner = true                  # Enable named entity recognition
 enable_pos_tagging = true          # Enable part-of-speech tagging
+auto_download = true               # Auto-download model if missing via spacy CLI
 
 # ============================================================
 # TEXT PROCESSOR COMPONENT CONFIGURATION
@@ -387,21 +396,32 @@ to_station = "s2000002"            # Default destination station ID
 max_results = 3                    # Maximum schedule results
 
 # ============================================================
-# WORKFLOWS - Processing Pipelines
+# WORKFLOWS - Processing Pipelines (Two-Level Configuration)
 # ============================================================
+# Two-level hierarchy:
+# 1. [components] section controls which components are AVAILABLE system-wide
+# 2. [workflows.X] section controls which pipeline stages this workflow USES
+# 
+# Validation rules:
+# - workflow stage can only be enabled if corresponding component is enabled
+# - component enabled + workflow stage disabled = WARNING (wasteful but valid)
+# - component disabled + workflow stage enabled = FATAL ERROR
+
 [workflows]
 enabled = ["unified_voice_assistant"]  # List of enabled workflows
 default = "unified_voice_assistant"    # Default workflow to execute
 
 # Unified Voice Assistant Workflow Configuration
 [workflows.unified_voice_assistant]
-# Pipeline stage enablement (conditional processing)
-voice_trigger_enabled = true       # Enable voice trigger stage
-asr_enabled = true                 # Enable ASR stage
-text_processing_enabled = true     # Enable text processing stage
-nlu_enabled = true                 # Enable NLU stage
-intent_execution_enabled = true    # Enable intent execution stage
-tts_enabled = true                 # Enable TTS output stage
+# Pipeline stage enablement (requires corresponding components to be enabled)
+voice_trigger_enabled = true       # Enable voice trigger stage (requires components.voice_trigger = true)
+asr_enabled = true                 # Enable ASR stage (requires components.asr = true)
+text_processing_enabled = true     # Enable text processing stage (requires components.text_processor = true)
+nlu_enabled = true                 # Enable NLU stage (requires components.nlu = true)
+intent_execution_enabled = true    # Enable intent execution stage (requires components.intent_system = true)
+llm_enabled = true                 # Enable LLM processing stage (requires components.llm = true)
+tts_enabled = true                 # Enable TTS output stage (requires components.tts = true)
+audio_enabled = true               # Enable audio playback stage (requires components.audio = true)
 
 # Audio processing configuration
 buffer_size_ms = 100.0             # Audio buffer size in milliseconds
@@ -413,16 +433,40 @@ default_language = "ru"            # Default processing language
 session_timeout_minutes = 30       # Session timeout for context
 
 # ============================================================
-# ASSET MANAGEMENT - Environment-Driven
+# ASSET MANAGEMENT - Comprehensive Configuration
 # ============================================================
 [assets]
+# Directory management
 auto_create_dirs = true            # Automatically create asset directories
+cleanup_on_startup = false         # Clean temporary files on startup
+
+# Download configuration  
+auto_download = true               # Automatically download missing models
+download_timeout_seconds = 300     # Download timeout in seconds (5 minutes)
+max_download_retries = 3           # Maximum download retry attempts
+verify_downloads = true            # Verify downloaded file integrity
+
+# Cache configuration
+cache_enabled = true               # Enable model and file caching
+max_cache_size_mb = 2048           # Maximum cache size in megabytes (2GB)
+cache_ttl_hours = 24               # Cache time-to-live in hours
+
+# Model management
+preload_essential_models = false   # Preload essential models on startup (requires more memory)
+model_compression = true           # Use compressed model formats when available
+concurrent_downloads = 2           # Maximum concurrent model downloads
 
 # Asset paths are controlled by environment variables:
 # IRENE_ASSETS_ROOT (default: ~/.cache/irene)
-#   ├── models/          - AI models and weights
+#   ├── models/          - AI models and weights (automatically managed)
 #   ├── cache/           - Runtime cache and temporary files
 #   └── credentials/     - API keys and authentication files
+#
+# NOTE: Model paths (model_path, model_paths) are NOT configurable in provider settings.
+# All AI models are automatically managed by the Asset Manager system:
+# - Models are downloaded to IRENE_ASSETS_ROOT/models/{provider}/{model_id}
+# - Providers automatically discover their models via asset manager
+# - No manual path configuration needed - just enable the provider!
 
 # Environment variable examples:
 # export IRENE_ASSETS_ROOT="/opt/irene/assets"
@@ -432,6 +476,12 @@ auto_create_dirs = true            # Automatically create asset directories
 # export GOOGLE_APPLICATION_CREDENTIALS="/path/to/service-account.json"
 # export PICOVOICE_ACCESS_KEY="your_picovoice_key_here"
 # export YANDEX_SCHEDULES_API_KEY="your_yandex_key_here"
+#
+# Model preloading examples (override TOML settings):
+# export IRENE_TTS__PROVIDERS__SILERO_V4__PRELOAD_MODELS=true
+# export IRENE_ASR__PROVIDERS__WHISPER__PRELOAD_MODELS=true
+# export IRENE_ASR__PROVIDERS__VOSK__PRELOAD_MODELS=true
+# export IRENE_VOICE_TRIGGER__PROVIDERS__OPENWAKEWORD__PRELOAD_MODELS=true
 
 # ============================================================
 # EXAMPLE DEPLOYMENT PROFILES
@@ -443,21 +493,26 @@ auto_create_dirs = true            # Automatically create asset directories
 # - Enable all components: tts=true, audio=true, asr=true, voice_trigger=true
 # - Enable microphone: system.microphone_enabled=true, inputs.microphone=true
 # - Configure providers with API keys
+# - Enable model preloading for faster response: preload_models=true for key providers
 
 # API-ONLY PROFILE (text processing only):
 # - Disable voice components: tts=false, audio=false, asr=false, voice_trigger=false
 # - Enable text processing: llm=true, nlu=true, text_processor=true
 # - Enable web API: system.web_api_enabled=true, inputs.web=true
+# - Consider preloading NLU models: nlu.providers.spacy_nlu.preload_models=true
 
 # HEADLESS PROFILE (minimal functionality):
 # - Disable all audio: system.microphone_enabled=false, system.audio_playback_enabled=false
 # - Disable web API: system.web_api_enabled=false
 # - Enable CLI only: inputs.cli=true, inputs.default_input="cli"
+# - Disable model preloading to save memory: preload_models=false for all providers
 
 # EMBEDDED PROFILE (resource-constrained):
 # - Use lightweight providers: asr.providers.vosk, tts.providers.console
 # - Disable resource-intensive features: llm=false, text_processor.providers.tts_text_processor=false
 # - Reduce concurrency: max_concurrent_commands=3
+# - Disable model preloading: preload_models=false for all providers
+# - Reduce cache sizes: assets.max_cache_size_mb=256
 
 # ============================================================
 # END OF MASTER CONFIGURATION
