--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ dependencies = [
     # Configuration and validation (now required)
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
-
     "tomli-w>=1.0.0", # For TOML writing support
     # Logging and utilities
     "termcolor>=1.1.0",
     # NLU fuzzy matching (JSON donation system requirement)
     "rapidfuzz>=3.0.0",
     "jsonschema>=4.25.0",
+    "prompt-toolkit>=3.0.51",
 ]
 
 [project.optional-dependencies]
