model config fixes

--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -228,7 +228,7 @@ fallback_providers = ["console"]    # Fallback providers in order
 enabled = true                      # Enable OpenAI provider
 api_key = "${OPENAI_API_KEY}"      # API key from environment variable
 base_url = "https://api.openai.com/v1"  # API base URL
-default_model = "gpt-4.1-mini"            # Model: "gpt-3.5-turbo", "gpt-4", "gpt-4-turbo"
+default_model = "gpt-4o-mini"            # Model: "gpt-3.5-turbo", "gpt-4o", "gpt-4o-mini"
 max_tokens = 150                   # Maximum response tokens
 temperature = 0.3                  # Creativity level (0.0-2.0)
 top_p = 1.0                       # Nucleus sampling parameter
