--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -118,7 +118,7 @@ enabled = false                     # Enable Silero v4 provider
 default_speaker = "xenia"          # Speaker voice: "xenia", "aidar", "baya", "kseniya", "eugene", "random"
 sample_rate = 48000                # Audio sample rate: 24000, 48000, 96000
 torch_device = "cpu"               # PyTorch device: "cpu", "cuda"
-preload_models = false             # Preload AI models during provider initialization for faster startup
+preload_models = true              # Preload AI models during provider initialization for faster startup
 
 # Silero v3 TTS Provider (legacy support)
 [tts.providers.silero_v3]
@@ -129,7 +129,7 @@ torch_device = "cpu"               # PyTorch device: "cpu", "cuda"
 put_accent = true                  # Enable accent marks in speech
 put_yo = true                      # Use ё character in speech
 threads = 4                        # Number of processing threads
-preload_models = false             # Preload AI models during provider initialization for faster startup
+preload_models = true              # Preload AI models during provider initialization for faster startup
 
 # Pyttsx TTS Provider (cross-platform system TTS)
 [tts.providers.pyttsx]
@@ -144,7 +144,7 @@ enabled = false                     # Enable Vosk TTS provider
 default_language = "ru"            # Default language: "ru", "en", "de", "fr"
 sample_rate = 22050                # Audio sample rate
 voice_speed = 1.0                  # Voice speed multiplier (0.1-3.0)
-preload_models = false             # Preload AI models during provider initialization for faster startup
+preload_models = true              # Preload AI models during provider initialization for faster startup
 
 # ============================================================
 # AUDIO (PLAYBACK) COMPONENT CONFIGURATION
@@ -196,7 +196,7 @@ device = "cpu"                     # Device: "cpu", "cuda"
 default_language = "ru"            # Language (null = auto-detect, "en", "ru", etc.)
 temperature = 0.0                  # Temperature for decoding (0.0-1.0)
 no_speech_threshold = 0.6          # No speech detection threshold
-preload_models = false             # Preload AI models during provider initialization for faster startup
+preload_models = true              # Preload AI models during provider initialization for faster startup
 
 # Vosk ASR Provider (offline, lighter models)
 [asr.providers.vosk]
@@ -204,7 +204,7 @@ enabled = false                     # Enable Vosk provider
 default_language = "ru"            # Default language: "ru", "en"
 sample_rate = 16000                # Audio sample rate
 confidence_threshold = 0.7         # Minimum confidence for recognition
-preload_models = false             # Preload AI models during provider initialization for faster startup
+preload_models = true              # Preload AI models during provider initialization for faster startup
 
 # Google Cloud Speech ASR Provider (cloud-based, high accuracy)
 [asr.providers.google_cloud]
@@ -228,7 +228,7 @@ fallback_providers = ["console"]    # Fallback providers in order
 enabled = true                      # Enable OpenAI provider
 api_key = "${OPENAI_API_KEY}"      # API key from environment variable
 base_url = "https://api.openai.com/v1"  # API base URL
-default_model = "gpt-4o-mini"            # Model: "gpt-3.5-turbo", "gpt-4o", "gpt-4o-mini"
+default_model = "gpt-4o"            # Model: "gpt-3.5-turbo", "gpt-4o", "gpt-4o-mini"
 max_tokens = 150                   # Maximum response tokens
 temperature = 0.3                  # Creativity level (0.0-2.0)
 top_p = 1.0                       # Nucleus sampling parameter
