--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "rapidfuzz>=3.0.0",
     "jsonschema>=4.25.0",
     "prompt-toolkit>=3.0.51",
+    "aiohttp>=3.12.15",
+    "numpy<2",
 ]
 
 [project.optional-dependencies]
@@ -66,9 +68,10 @@ audio-output = [
 
 # Voice trigger (wake word detection)
 voice-trigger = [
-    "openwakeword>=0.6.0",
     "numpy>=1.21.0",
-    "tflite-runtime>=2.12.0",  # Lightweight runtime for microWakeWord (~50MB vs ~800MB tensorflow)
+    "tflite-runtime>=2.12.0", # Lightweight runtime for microWakeWord (~50MB vs ~800MB tensorflow)
+    "aiohttp>=3.8.0", # Required for asset management model downloads
+    "openwakeword>=0.6.0",
 ]
 
 # Web API components
