--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,12 @@ irene-build-analyze = "irene.tools.build_analyzer:main"
 irene-dependency-validate = "irene.tools.dependency_validator:main"
 irene-intent-validate = "irene.tools.intent_validator:main"
 
+# Main runners
+irene-cli = "irene.runners.cli:run_cli"
+irene-webapi = "irene.runners.webapi_runner:run_webapi"
+irene-vosk = "irene.runners.vosk_runner:run_vosk"
+irene-settings = "irene.runners.settings_runner:run_settings"
+
 # ============================================================
 # ENTRY-POINTS CATALOG - Provider Discovery System
 # ============================================================
