--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -451,21 +451,21 @@ info_detail_level = "basic"        # Level of system info to provide (basic/deta
 # ============================================================
 [vad]
 enabled = true                     # Enable VAD processing to solve 23ms chunk problem
-energy_threshold = 0.001           # Adjusted threshold based on actual audio levels (0.0-1.0)
-sensitivity = 1.0                  # Higher sensitivity for speech detection in noise (0.1-2.0)
-voice_duration_ms = 100            # Minimum duration to distinguish speech from noise bursts (10-1000)
-silence_duration_ms = 1000         # Longer silence duration for natural speech pauses (50-2000)
-max_segment_duration_s = 8         # Reduced maximum voice segment duration in seconds (1-60)
-use_zero_crossing_rate = true      # Enable ZCR to distinguish speech from machinery noise
-adaptive_threshold = true          # Enable adaptive threshold to adjust to background noise
-noise_percentile = 30              # Higher percentile for noisy environments (1-50)
-voice_multiplier = 3.5             # Moderate multiplier above noise floor (1.0-10.0)
+energy_threshold = 0.005           # Increased threshold for better noise rejection on low-quality mics (0.0-1.0)
+sensitivity = 1.5                  # Higher sensitivity = lower effective threshold (0.1-3.0)
+voice_duration_ms = 150            # Slightly longer minimum duration to avoid false positives (10-1000)
+silence_duration_ms = 800          # Reduced silence duration for more responsive detection (50-2000)
+max_segment_duration_s = 8         # Maximum voice segment duration in seconds (1-60)
+use_zero_crossing_rate = true      # Enable ZCR with improved range-based logic
+adaptive_threshold = true          # Enable improved adaptive threshold with proper noise estimation
+noise_percentile = 25              # Percentile for noise floor estimation - balanced for various environments (1-50)
+voice_multiplier = 4.0             # Multiplier above noise floor - increased for better discrimination (1.0-10.0)
 processing_timeout_ms = 50         # Maximum processing time per frame in milliseconds (1-100)
-buffer_size_frames = 300           # Increased maximum frames to buffer in voice segments (10-200)
+buffer_size_frames = 300           # Maximum frames to buffer in voice segments (10-200)
 
 # Frame-based configuration (internal implementation)
-voice_frames_required = 1          # Voice frames required to confirm speech vs noise (1-10)
-silence_frames_required = 10       # Consecutive silence frames to confirm voice end (1-20)
+voice_frames_required = 2          # Require 2 consecutive frames to reduce single-frame false positives (1-10)
+silence_frames_required = 8        # Reduced frames needed to confirm voice end for responsiveness (1-20)
 
 # ============================================================
 # WORKFLOWS - Processing Pipelines (Two-Level Configuration)
