vad vs asr volume disconnect

--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -451,17 +451,21 @@ info_detail_level = "basic"        # Level of system info to provide (basic/deta
 # ============================================================
 [vad]
 enabled = true                     # Enable VAD processing to solve 23ms chunk problem
-energy_threshold = 0.005           # Increased threshold for better noise rejection on low-quality mics (0.0-1.0)
-sensitivity = 1.5                  # Higher sensitivity = lower effective threshold (0.1-3.0)
-voice_duration_ms = 150            # Slightly longer minimum duration to avoid false positives (10-1000)
-silence_duration_ms = 800          # Reduced silence duration for more responsive detection (50-2000)
+energy_threshold = 0.002           # Lowered threshold for better sensitivity to normal speech volume (0.0-1.0)
+sensitivity = 2.0                  # Higher sensitivity = much lower effective threshold for normal speech (0.1-3.0)
+voice_duration_ms = 80             # Shorter minimum duration to catch quick phonemes like "И", "К" (10-1000)
+silence_duration_ms = 600          # Shorter silence for more responsive detection of continuous speech (50-2000)
 max_segment_duration_s = 8         # Maximum voice segment duration in seconds (1-60)
 use_zero_crossing_rate = true      # Enable ZCR with improved range-based logic
 adaptive_threshold = true          # Enable improved adaptive threshold with proper noise estimation
-noise_percentile = 25              # Percentile for noise floor estimation - balanced for various environments (1-50)
-voice_multiplier = 4.0             # Multiplier above noise floor - increased for better discrimination (1.0-10.0)
+noise_percentile = 20              # Lower percentile for quieter environments - more sensitive (1-50)
+voice_multiplier = 2.5             # Reduced multiplier for better sensitivity to normal speech levels (1.0-10.0)
 processing_timeout_ms = 50         # Maximum processing time per frame in milliseconds (1-100)
 buffer_size_frames = 300           # Maximum frames to buffer in voice segments (10-200)
+
+# Audio normalization for ASR (prevents clipping when VAD triggers on loud audio)
+normalize_for_asr = true           # Enable audio normalization before sending to ASR
+asr_target_rms = 0.08              # Target RMS level for ASR audio normalization (0.01-0.3)
 
 # Frame-based configuration (internal implementation)
 voice_frames_required = 2          # Require 2 consecutive frames to reduce single-frame false positives (1-10)
