fire-and-forget completion, monitoring, notifications

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -259,6 +259,7 @@ voice_trigger = "irene.components.voice_trigger_component:VoiceTriggerComponent"
 nlu = "irene.components.nlu_component:NLUComponent"
 text_processor = "irene.components.text_processor_component:TextProcessorComponent"
 intent_system = "irene.components.intent_component:IntentComponent"
+monitoring = "irene.components.monitoring_component:MonitoringComponent"
 
 [project.entry-points."irene.workflows"]
 unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"
