--- a/configs/config-master.toml
+++ b/configs/config-master.toml
@@ -57,10 +57,10 @@ default_input = "microphone"       # Default input: "microphone", "web", "cli"
 # Microphone Input Configuration
 [inputs.microphone_config]
 enabled = true                      # Enable microphone input processing
-device_id = 7                       # Audio device ID (ThinkPad USB-C Dock Audio)
-sample_rate = 44100                # Audio sample rate: 8000, 16000, 22050, 44100, 48000 (hardware-dependent)
-channels = 1                       # Audio channels: 1 (mono), 2 (stereo)
-chunk_size = 4096                  # Increased audio buffer chunk size to prevent overflow (was 1024)
+device_id = 7                       # Audio device ID (ThinkPad USB-C Dock Audio: 44100 Hz, 1 channel)
+sample_rate = 44100                # Audio sample rate: matches device 7 native rate
+channels = 1                       # Audio channels: 1 (mono) - matches device 7
+chunk_size = 4096                  # Audio buffer chunk size for stable processing
 buffer_queue_size = 50             # Audio buffer queue size for handling processing delays
 auto_resample = true               # Enable automatic resampling for component compatibility
 resample_quality = "medium"        # Resampling quality: "fast", "medium", "high", "best"
@@ -451,10 +451,10 @@ info_detail_level = "basic"        # Level of system info to provide (basic/deta
 # ============================================================
 [vad]
 enabled = true                     # Enable VAD processing to solve 23ms chunk problem
-energy_threshold = 0.002           # Lowered threshold for better sensitivity to normal speech volume (0.0-1.0)
+energy_threshold = 0.0015          # Balanced threshold - not too sensitive, not too high (0.0-1.0)
 sensitivity = 2.0                  # Higher sensitivity = much lower effective threshold for normal speech (0.1-3.0)
 voice_duration_ms = 80             # Shorter minimum duration to catch quick phonemes like "И", "К" (10-1000)
-silence_duration_ms = 600          # Shorter silence for more responsive detection of continuous speech (50-2000)
+silence_duration_ms = 400          # Even shorter silence for faster VAD response to speech onset (50-2000)
 max_segment_duration_s = 8         # Maximum voice segment duration in seconds (1-60)
 use_zero_crossing_rate = true      # Enable ZCR with improved range-based logic
 adaptive_threshold = true          # Enable improved adaptive threshold with proper noise estimation
@@ -464,12 +464,12 @@ processing_timeout_ms = 50         # Maximum processing time per frame in millis
 buffer_size_frames = 300           # Maximum frames to buffer in voice segments (10-200)
 
 # Audio normalization for ASR (prevents clipping when VAD triggers on loud audio)
-normalize_for_asr = true           # Enable audio normalization before sending to ASR
+normalize_for_asr = true           # RE-ENABLED - fixed double scaling bug and range issues
 asr_target_rms = 0.15              # Target RMS level for ASR audio normalization - increased for better VOSK recognition (0.01-0.3)
 enable_fallback_to_original = true # Try original audio if normalized version fails recognition
 
 # Frame-based configuration (internal implementation)
-voice_frames_required = 2          # Require 2 consecutive frames to reduce single-frame false positives (1-10)
+voice_frames_required = 2          # Require 2 consecutive frames for stable detection - prevents false triggers (1-10)
 silence_frames_required = 8        # Reduced frames needed to confirm voice end for responsiveness (1-20)
 
 # ============================================================
