--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ web-api = [
     "fastapi>=0.100.0",
     "uvicorn[standard]>=0.20.0",
     "websockets>=11.0.0",
+    "python-multipart>=0.0.6",  # Required for file uploads in Audio/ASR endpoints
 ]
 
 # Cloud ASR components
