backend support for config editor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -261,6 +261,7 @@ nlu = "irene.components.nlu_component:NLUComponent"
 text_processor = "irene.components.text_processor_component:TextProcessorComponent"
 intent_system = "irene.components.intent_component:IntentComponent"
 monitoring = "irene.components.monitoring_component:MonitoringComponent"
+configuration = "irene.components.configuration_component:ConfigurationComponent"
 
 [project.entry-points."irene.workflows"]
 unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"
